# JobSeekersJournal

./: .gitignore  Dockerfile  LICENSE  README.md  entrypoint.py  pyproject.toml
src/jobjournal/: jobjournal_gui.py
src/jobjournal/utils/i18n/: loader.py
src/jobjournal/utils/i18n/locales/: en-us.json  fr.json
src/jobjournal/utils/pages/: add_position.py  edit_application.py  my_applications.py  overview.py
src/jobjournal/utils/sql/: data_process_func.py  queries.py  var.py
src/jobjournal/utils/templ/: db.init.sql  mappings.py
